# h3-origin-destination-matrix

./: .bumpversion.cfg  .gitignore  AGENTS.md  Makefile  README.md  config.ini  environment.yml  make.cmd  pyproject.toml
arcgis/: .pyHistory  h3-origin-destination-matrix.AddDestinationDistance.pyt.xml  h3-origin-destination-matrix.aprx  h3-origin-destination-matrix.pyt  h3-origin-destination-matrix.pyt.xml  h3-origin-destination-matrix.tbx
arcgis/GpMessages/: 2516911916945300  2516942420808300  311704710300700  311832895767700  311872199343000  311996880477300  312020874660000  325324731089300  77401316475800  77416069752400  931168107428800  931191184432500  931208014016900  931234581272600  931259374369300  94903601999400
arcgis/styles/: Firefly.stylx  GlassyNorthArrows.stylx  PaperCut.stylx  PenAndInk.stylx  PhysicalGeographyAtlas.stylx  Sketch.stylx
conda-recipe/: meta.yaml
config/: config.yml  secrets_template.yml
docsrc/: conf.py  index.rst  mkdocs.yml
docsrc/mkdocs/: api.md  code-review-h3-od.md  how-to-configuration.md  index.md  reference.md
notebooks/: Untitled.ipynb  arcpy._ba.ipynb  get_exitsing_origin_ids.ipynb  multithread_k_neighbors.ipynb  network_modes.ipynb  notebook-template.ipynb  retrieve_od.ipynb
scripts/: config.ini  get_package_dependencies.py  lookup_h3_od.py  make_data.py  make_data_for_aoi.py  make_data_for_olympia_testing.py  make_data_olympia.py  make_data_scottsdale.py
src/h3_od/: __init__.py  config.py  distance_decay.py  proximity.py
src/h3_od/utils/: __init__.py  _logging.py  _pyarrow.py  arcpy_geometry.py  h3_arcgis.py  h3_arcpy.py  logging_utils.py  pyarrow_utils.py
testing/: conftest.py  test_h3_od.py  test_h3_od_proximity.py  test_utils_h3_arcpy.py
