[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "h3-origin-destination-matrix"
version = "0.0.0"
authors = [
  { name="Joel McCune (https://github.com/knu2xs)"},
]
description = "Create an origin-destination matrix using H3 indices."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
license = {file = "LICENSE"}
dependencies = [
    "arcgis",
    "dask[dataframe]",
    "h3==4.*",
    "pyarrow",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["h3_od"]
