[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "h3-origin-destination-matrix"
version = "0.0.0"
authors = [
  { name="Joel McCune (https://github.com/knu2xs)"},
]
description = "Create an origin-destination matrix using H3 indices with the ArcGIS Pro package, arcpy.nax."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
license = {file = "LICENSE"}
dependencies = [
    "arcgis>=2.4",
    "h3==4.*",
    "numpy",
    "pandas",
    "pyarrow",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["h3_od"]
